46-netpol/secure-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: secure-pod
  name: secure-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: secure-pod
